<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="movieapplication.activity.com.designtesttwo.Activities.Profile_Ac"
    tools:showIn="@layout/activity_profile">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/nav_header_backgroung"
        android:minHeight="?actionBarSize">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_avatar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/views_margin"
            android:layout_marginTop="@dimen/views_margin"
            android:src="@mipmap/ic_account_circle_white_36dp"
            tools:ignore="RtlHardcoded" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/prof_name"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_activity_by_24dp"
            android:layout_toLeftOf="@id/profile_avatar"
            android:text="@string/pref_default_display_name"
            android:textColor="@color/whiteColor"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />


        <LinearLayout
            android:id="@+id/following_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/prof_name"
            android:layout_marginLeft="@dimen/views_margin"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="@dimen/views_margin"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textColor="@color/whiteColor"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/following"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="30"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/prof_name"
            android:layout_marginLeft="@dimen/views_margin"
            android:layout_toRightOf="@id/following_layout"
            android:orientation="vertical"
            android:paddingBottom="@dimen/views_margin"
            tools:ignore="ObsoleteLayoutParam,RtlHardcoded">

            <android.support.v7.widget.AppCompatTextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/views_margin"
                android:text="@string/following"
                android:textColor="@color/whiteColor"
                android:textStyle="normal"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/followers"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="30"
                android:textColor="@color/colorPrimary"
                android:textStyle="normal"
                tools:ignore="RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_data"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/list_view_selector"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prompt_email"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/prof_email"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_blank_fragment"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/views_margin"
                    android:weightSum="2">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prompt_mobile"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/prof_mobile"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_blank_fragment"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/views_margin"
                    android:weightSum="2">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prompt_gender"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/prof_gender"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_blank_fragment"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/views_margin"
                android:text="@string/scholarly_data"
                android:textAllCaps="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/list_view_selector"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prompt_faculty"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/prof_faculty"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_blank_fragment"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/views_margin"
                    android:layout_weight="2">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prompt_level"
                        android:textColor="@color/colorPrimary"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:id="@+id/prof_level"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hello_blank_fragment"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/views_margin"
                    android:weightSum="2">

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/prompt_entity"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/prof_entry"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/views_margin"
                        android:layout_weight="1"
                        android:text="@string/hello_blank_fragment"
                        android:textColor="@color/black"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>
